--- a/Develop/index.html
+++ b/Develop/index.html
@@ -1,22 +1,27 @@
+<!-- HTML boilerplate (HTML skeleton) formatting below -->
 <!DOCTYPE html>
 <html lang="en-us">
+
+<!-- Within the head is invisible meta data, including attaching the stylesheet,
+the name of the browser tab, and the tab's small icon representative of the company's logo. -->
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0"
-    />
-    <link rel="stylesheet" href="./assets/css/style.css" type="text/css" />
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/style.css" type="text/css">
     <link
       rel="icon"
       type="image/x-icon"
       href="./assets/images/horiseon_favicon.ico"
-      alt="Horiseon icon"
-    />
-    <title>Horiseon</title>
+      alt="Horiseon icon">
+    <title>Horiseon, Inc</title>
   </head>
 
+<!-- All visible content of the page is below, including webpage title,
+large picture (known as the hero image), three main content blocks and a right-side content block,
+plus a footer.-->
   <body>
     <header class="header">
       <h1>Hori<span class="seo">seo</span>n</h1>
@@ -26,9 +31,7 @@
             <a href="#search-engine-optimization">Search Engine Optimization</a>
           </li>
           <li>
-            <a href="#online-reputation-management"
-              >Online Reputation Management</a
-            >
+            <a href="#online-reputation-management">Online Reputation Management</a>
           </li>
           <li>
             <a href="#social-media-marketing">Social Media Marketing</a>
@@ -36,18 +39,17 @@
         </ul>
       </nav>
     </header>
-    <figure class="hero">
+    <figure class="hero" aria-label="Employee collaboration">
     </figure>
     <main class="content">
       <section
         id="search-engine-optimization"
-        class="search-engine-optimization"
-      >
+        class="search-engine-optimization">
         <img
           src="./assets/images/search-engine-optimization.jpg"
           class="float-left"
-          alt="Bird's eye view of a desk with a notebook that has a thinking map of search engine optimization-related ideas."
-        />
+          alt="Bird's eye view of a desk with a notebook that has a
+               thinking map of search engine optimization-related ideas.">
         <h2>Search Engine Optimization</h2>
         <p>
           The dominance of mobile internet use means that users are searching
@@ -58,13 +60,11 @@
       </section>
       <section
         id="online-reputation-management"
-        class="online-reputation-management"
-      >
+        class="online-reputation-management">
         <img
           src="./assets/images/online-reputation-management.jpg"
           class="float-right"
-          alt="Worker at computer whose screens shows a colorful Reputation graph."
-        />
+          alt="Worker at computer whose screen shows a colorful Reputation graph.">
         <h2>Online Reputation Management</h2>
         <p>
           The web is full of opinions, and some of these can be negative. Social
@@ -78,8 +78,8 @@
         <img
           src="./assets/images/social-media-marketing.jpg"
           class="float-left"
-          alt="Bird's eye view of social media logos and emblems on a crowded desk at which six people are sitting."
-        />
+          alt="Bird's eye view of social media logos and emblems on a crowded desk
+               at which six people are sitting.">
         <h2>Social Media Marketing</h2>
         <p>
           Social media continues to have a sizable influence on buying habits.
@@ -94,8 +94,7 @@
         <h3>Lead Generation</h3>
         <img
           src="./assets/images/lead-generation.png"
-          alt="Logo resembling a gear going into a funnel and a bag of money being the result."
-        />
+          alt="Logo resembling a gear going into a funnel and a bag of money being the result.">
         <p>
           Inbound strategies for lead generation require less work for your
           business, bringing customers directly to your website.
@@ -105,8 +104,8 @@
         <h3>Brand Awareness</h3>
         <img
           src="./assets/images/brand-awareness.png"
-          alt="Logo resembling a person with a lightbulb for a head with sound waves extending outwards on both right and left sides"
-        />
+          alt="Logo resembling a person with a lightbulb for a head with sound waves extending
+               outwards on both right and left sides">
         <p>
           Users find your business through paid and organic searches, increasing
           the search ranking and visibility for your business.
@@ -116,8 +115,7 @@
         <h3>Cost Management</h3>
         <img
           src="./assets/images/cost-management.png"
-          alt="Logo resembling bags of money in front of a single gear."
-        />
+          alt="Logo resembling bags of money in front of a single gear.">
         <p>
           As the search ranking for your business increases, your advertising
           costs decrease, and you no longer need to advertise your page.
