--- a/index.html
+++ b/index.html
@@ -4,20 +4,18 @@
   <!-- Within the head is invisible meta data, including attaching the stylesheet,
 the name of the browser tab, and the tab's small icon representative of the company's logo. -->
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0"
-    />
-    <link rel="stylesheet" href="./assets/css/style.css" type="text/css" />
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/style.css" type="text/css">
     <link
       rel="icon"
       type="image/x-icon"
       href="./assets/images/horiseon_favicon.ico"
-      alt="Horiseon icon"
-    />
-    <title>Horiseon, Inc</title>
+      alt="Horiseon icon">
+    <title>Horiseon Social Solution Services, Inc</title>
   </head>
 
   <!-- All visible content of the page is below, including webpage title,
@@ -46,14 +44,12 @@ plus a footer.-->
     <main class="content">
       <section
         id="search-engine-optimization"
-        class="search-engine-optimization"
-      >
+        class="search-engine-optimization">
         <img
           src="./assets/images/search-engine-optimization.jpg"
           class="float-left"
           alt="Bird's eye view of a desk with a notebook that has a
-               thinking map of search engine optimization-related ideas."
-        />
+               thinking map of search engine optimization-related ideas.">
         <h2>Search Engine Optimization</h2>
         <p>
           The dominance of mobile internet use means that users are searching
@@ -64,13 +60,11 @@ plus a footer.-->
       </section>
       <section
         id="online-reputation-management"
-        class="online-reputation-management"
-      >
+        class="online-reputation-management">
         <img
           src="./assets/images/online-reputation-management.jpg"
           class="float-right"
-          alt="Worker at computer whose screen shows a colorful Reputation graph."
-        />
+          alt="Worker at computer whose screen shows a colorful Reputation graph.">
         <h2>Online Reputation Management</h2>
         <p>
           The web is full of opinions, and some of these can be negative. Social
@@ -85,8 +79,7 @@ plus a footer.-->
           src="./assets/images/social-media-marketing.jpg"
           class="float-left"
           alt="Bird's eye view of social media logos and emblems on a crowded desk
-               at which six people are sitting."
-        />
+               at which six people are sitting.">
         <h2>Social Media Marketing</h2>
         <p>
           Social media continues to have a sizable influence on buying habits.
@@ -101,8 +94,7 @@ plus a footer.-->
         <h3>Lead Generation</h3>
         <img
           src="./assets/images/lead-generation.png"
-          alt="Logo resembling a gear going into a funnel and a bag of money being the result."
-        />
+          alt="Logo resembling a gear going into a funnel and a bag of money being the result.">
         <p>
           Inbound strategies for lead generation require less work for your
           business, bringing customers directly to your website.
@@ -113,8 +105,7 @@ plus a footer.-->
         <img
           src="./assets/images/brand-awareness.png"
           alt="Logo resembling a person with a lightbulb for a head with sound waves extending
-               outwards on both right and left sides"
-        />
+               outwards on both right and left sides">
         <p>
           Users find your business through paid and organic searches, increasing
           the search ranking and visibility for your business.
@@ -124,8 +115,7 @@ plus a footer.-->
         <h3>Cost Management</h3>
         <img
           src="./assets/images/cost-management.png"
-          alt="Logo resembling bags of money in front of a single gear."
-        />
+          alt="Logo resembling bags of money in front of a single gear.">
         <p>
           As the search ranking for your business increases, your advertising
           costs decrease, and you no longer need to advertise your page.
